--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -250,11 +250,11 @@
       class="mt-12 flex flex-col md:flex-row justify-between text-center text-gray-700 text-lg font-semibold space-y-4 md:space-y-0"
     >
       <a
-        routerLink="/writer-registration"
+        href="/writer-registration"
         class="text-yellow-500 hover:underline transition"
         >Are you a writer? Click here.</a
       >
-      <a routerLink="/login" class="text-yellow-500 hover:underline transition"
+      <a href ="/login" class="text-yellow-500 hover:underline transition"
         >Already have an existing account? Login.</a
       >
     </div>
