--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,25 @@
-<router-outlet></router-outlet>
+<div class="relative min-h-screen flex">
+  <!-- Sidebar -->
+  <app-sidebar *ngIf="!hideSidebar"
+               [isSidebarOpen]="isSidebarOpen || !isMobileView"
+               [isMobileView]="isMobileView"
+               (toggleSidebar)="toggleSidebar()">
+  </app-sidebar>
+
+  <!-- Main Content Area -->
+  <div class="flex-1 flex flex-col">
+    <!-- Navbar -->
+    <app-navbar *ngIf="!hideSidebar"
+                [isMobileView]="isMobileView"
+                [hideNavbar]="hideSidebar"
+                (toggleSidebar)="toggleSidebar()">
+    </app-navbar>
+
+    <!-- Content Area with proper spacing -->
+    <div class="content-wrapper" [class.md:ml-64]="!hideSidebar">
+      <div class="content-inner">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </div>
+</div>
