--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="relative min-h-screen flex">
-  <!-- Sidebar -->
+  <!-- Sidebar (only shown on allowed routes) -->
   <app-sidebar *ngIf="!hideSidebar"
                [isSidebarOpen]="isSidebarOpen || !isMobileView"
                [isMobileView]="isMobileView"
@@ -8,15 +8,18 @@
 
   <!-- Main Content Area -->
   <div class="flex-1 flex flex-col">
-    <!-- Navbar -->
+    <!-- Navbar (only shown on allowed routes) -->
     <app-navbar *ngIf="!hideSidebar"
                 [isMobileView]="isMobileView"
                 [hideNavbar]="hideSidebar"
                 (toggleSidebar)="toggleSidebar()">
     </app-navbar>
 
-    <!-- Content Area with proper spacing -->
-    <div class="content-wrapper" [class.md:ml-64]="!hideSidebar">
+    <!-- Content Area with conditional spacing -->
+    <div class="content-wrapper" 
+         [class.md:ml-64]="!hideSidebar"
+         [class.mt-[96px]]="!hideSidebar"
+         [class.mt-0]="hideSidebar">
       <div class="content-inner">
         <router-outlet></router-outlet>
       </div>
